work/20230216/prac/ingress/myapp-multi-paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing-mpath
spec:
  defaultBackend:
    service:
      name: myapp-svc-np
      port:
        number: 80
    rules:
    - host: myapp.example.com
      http:
        paths:
        - path: /web1
          pathType: Prefix
          backend:
            service:
              name: myapp-svc-ext-np1
              port:
                number: 80
        - path: /web2
          patchType: Prefix
          backend:
            service:
              name: myapp-svc-ext-np2
              port:
                number: 80
